tests/expectations/parser/functions/const_public_param_fail.out
Error [EPAR0370047]: expected parameter name
    --> test:4:14
     |
   4 | fn x(x: u32, const public y: i32) {
     |              ^^^^^
Error [EPAR0370047]: expected parameter name
    --> test:8:15
     |
   8 | fn x(constant public x: u32, y: i32) {
     |               ^^^^^^
